<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/itemResult"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgInput"
        android:layout_width="150dp"
        android:layout_height="240dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/kuetradisionallogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image_selected" />

    <TextView
        android:id="@+id/tvNama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:text="@string/nama_kue_tradisional"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgInput" />

    <TextView
        android:id="@+id/tvDeskripsi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginHorizontal="60dp"
        android:text="@string/deskripsi_kue_tradisional"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNama" />

    <TextView
        android:id="@+id/tvCTA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:text="@string/klik_tombol_di_bawah"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDeskripsi" />

    <TextView
        android:id="@+id/tvKeterangan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/untuk_melihat_resep_jajanan_di_atas"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCTA" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDetail"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:layout_marginTop="30dp"
        app:icon="@drawable/ic_arrow_forward"
        app:iconSize="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCTA"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.rounded" />

</androidx.constraintlayout.widget.ConstraintLayout>